--- a/National Park.html
+++ b/National Park.html
@@ -44,7 +44,7 @@
             <p class="head">If there’s one moment that captures the essence of Torres del Paine, it’s watching the sun paint the granite spires—Las Torres—with fiery hues. The trek to the base is no easy feat, winding through lenga forests, rocky moraines, and steep ascents. But the reward? An awe-inspiring view of the three colossal towers reflected in a milky blue glacial lake, glowing with the first light of day. It’s a sight that leaves you breathless, not just from the climb, but from the sheer magnitude of nature’s artistry.</p>
             
             <h2>Trekking the W and O Circuits</h2>
-            <img src="trek.webp" alt="Trekking" class="blog-image">
+            <img src="trek.webp" alt="Trekking" class="blog-image" width=50%>
             <p class="head">Torres del Paine is a hiker’s paradise, offering legendary trails like the W and O Circuits. The W trek, a multi-day journey through the park’s most stunning highlights, leads adventurers past the French Valley, Grey Glacier, and the famous towers. For those seeking an even deeper immersion, the O Circuit encircles the entire park, revealing hidden valleys, pristine rivers, and views that few ever witness. Along the way, refugios and campsites provide cozy shelters where weary hikers share stories over steaming cups of yerba mate.</p>
             
             <h2>Wildlife Among the Peaks and Plains</h2>
